{
  "version": 4,
  "terraform_version": "1.1.9",
  "serial": 31,
  "lineage": "d22cf2cb-d54c-78c7-3313-703a108ff432",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:745137160548:internet-gateway/igw-01c2ddeefe474cd0e",
            "id": "igw-01c2ddeefe474cd0e",
            "owner_id": "745137160548",
            "tags": {
              "Name": "levelup-tf-eks-demo-vpc"
            },
            "tags_all": {
              "Name": "levelup-tf-eks-demo-vpc"
            },
            "vpc_id": "vpc-043cd85d2ea3ae548"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-01c2ddeefe474cd0e",
            "id": "r-rtb-0a018ec4fd0f1b8d21080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0a018ec4fd0f1b8d2",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:745137160548:route-table/rtb-01c133c5de37ccda4",
            "id": "rtb-01c133c5de37ccda4",
            "owner_id": "745137160548",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "levelup-tf-eks-demo-vpc"
            },
            "tags_all": {
              "Name": "levelup-tf-eks-demo-vpc"
            },
            "timeouts": null,
            "vpc_id": "vpc-043cd85d2ea3ae548"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:745137160548:route-table/rtb-0fb50eabf5bf4d12c",
            "id": "rtb-0fb50eabf5bf4d12c",
            "owner_id": "745137160548",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "levelup-tf-eks-demo-vpc"
            },
            "tags_all": {
              "Name": "levelup-tf-eks-demo-vpc"
            },
            "timeouts": null,
            "vpc_id": "vpc-043cd85d2ea3ae548"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:745137160548:route-table/rtb-0bd6543f064b3dd81",
            "id": "rtb-0bd6543f064b3dd81",
            "owner_id": "745137160548",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "levelup-tf-eks-demo-vpc"
            },
            "tags_all": {
              "Name": "levelup-tf-eks-demo-vpc"
            },
            "timeouts": null,
            "vpc_id": "vpc-043cd85d2ea3ae548"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:745137160548:route-table/rtb-0a018ec4fd0f1b8d2",
            "id": "rtb-0a018ec4fd0f1b8d2",
            "owner_id": "745137160548",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "levelup-tf-eks-demo-vpc"
            },
            "tags_all": {
              "Name": "levelup-tf-eks-demo-vpc"
            },
            "timeouts": null,
            "vpc_id": "vpc-043cd85d2ea3ae548"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-036f0205d3ce8b489",
            "route_table_id": "rtb-01c133c5de37ccda4",
            "subnet_id": "subnet-02a4a03d0c99f18f2"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03e45b38af4c672a2",
            "route_table_id": "rtb-0fb50eabf5bf4d12c",
            "subnet_id": "subnet-0ba5f2e5dfbb73c59"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0064753160240cce8",
            "route_table_id": "rtb-0bd6543f064b3dd81",
            "subnet_id": "subnet-037ed1150a0a7bbc7"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0263e794b09a528bb",
            "route_table_id": "rtb-0a018ec4fd0f1b8d2",
            "subnet_id": "subnet-04440dfe05d97c9d7"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03279ac3306721517",
            "route_table_id": "rtb-0a018ec4fd0f1b8d2",
            "subnet_id": "subnet-0768a1dface2a44c7"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05761ca92d7f740f3",
            "route_table_id": "rtb-0a018ec4fd0f1b8d2",
            "subnet_id": "subnet-050a60fcf3b64af6c"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:745137160548:subnet/subnet-02a4a03d0c99f18f2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02a4a03d0c99f18f2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "745137160548",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "levelup-tf-eks-demo-vpc"
            },
            "tags_all": {
              "Name": "levelup-tf-eks-demo-vpc"
            },
            "vpc_id": "vpc-043cd85d2ea3ae548"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:745137160548:subnet/subnet-0ba5f2e5dfbb73c59",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ba5f2e5dfbb73c59",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "745137160548",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "levelup-tf-eks-demo-vpc"
            },
            "tags_all": {
              "Name": "levelup-tf-eks-demo-vpc"
            },
            "vpc_id": "vpc-043cd85d2ea3ae548"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:745137160548:subnet/subnet-037ed1150a0a7bbc7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-037ed1150a0a7bbc7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "745137160548",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "levelup-tf-eks-demo-vpc"
            },
            "tags_all": {
              "Name": "levelup-tf-eks-demo-vpc"
            },
            "vpc_id": "vpc-043cd85d2ea3ae548"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:745137160548:subnet/subnet-04440dfe05d97c9d7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04440dfe05d97c9d7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "745137160548",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "levelup-tf-eks-demo-vpc"
            },
            "tags_all": {
              "Name": "levelup-tf-eks-demo-vpc"
            },
            "vpc_id": "vpc-043cd85d2ea3ae548"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:745137160548:subnet/subnet-0768a1dface2a44c7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0768a1dface2a44c7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "745137160548",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "levelup-tf-eks-demo-vpc"
            },
            "tags_all": {
              "Name": "levelup-tf-eks-demo-vpc"
            },
            "vpc_id": "vpc-043cd85d2ea3ae548"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:745137160548:subnet/subnet-050a60fcf3b64af6c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.103.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-050a60fcf3b64af6c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "745137160548",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "levelup-tf-eks-demo-vpc"
            },
            "tags_all": {
              "Name": "levelup-tf-eks-demo-vpc"
            },
            "vpc_id": "vpc-043cd85d2ea3ae548"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:745137160548:vpc/vpc-043cd85d2ea3ae548",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0fb742aba876c8514",
            "default_route_table_id": "rtb-01b4ab66bd31836d8",
            "default_security_group_id": "sg-08d6885df1487bb62",
            "dhcp_options_id": "dopt-f39c6298",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-043cd85d2ea3ae548",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01b4ab66bd31836d8",
            "owner_id": "745137160548",
            "tags": {
              "Name": "levelup-tf-eks-demo-vpc"
            },
            "tags_all": {
              "Name": "levelup-tf-eks-demo-vpc"
            }
          }
        }
      ]
    }
  ]
}